syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "pspb";

option optimize_for = SPEED;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.gostring_all) = false;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = false;
option (gogoproto.benchgen_all) = false;
option (gogoproto.goproto_getters_all) = false;

service RpcApi {
    // Sends a greeting
    rpc Search (RpcSearchRequest) returns (RpcSearchResponse) {
    }
}

message RpcRequestHead {
    int64 time_out_ms = 1;
    string user_name = 2;
    string password = 3;
}

message RpcResponseHead {
    string error = 1;
    int64 code = 2;
}

message RpcSearchRequest {
    RpcRequestHead head = 1;
    string db_name = 2;
    string space_name = 3;
    string query = 4;
    string client_type = 5;
}

message RpcSearchResponse {
    RpcResponseHead head = 1;
    string body = 4; //it result json result for es format
}

